Fix overflowing slider with booking on firefox mob

--- a/style.css
+++ b/style.css
@@ -611,7 +611,6 @@ header .discount span:last-child {
 */
 .slider {
   margin: 30px 0;
-  height: 530px;
 }
 
 .slider .swiper-container {
